# advent-of-code-2022

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  cog.toml  cspell.json  package-lock.json  package.json  project-words.txt  renovate.json
.github/: settings.yml
.github/workflows/: build.yaml  build.yml  ci.yml  codeql.yml  container-cleanup.yml  dependabot.yml  format.yml  graduate-release.yml  lint-commits.yml  machete.yml  prettier.yml  publish-crate-after-release.yml  release.yml  retag-containers-after-push.yml  retag-containers-after-release.yml  rust.yml  semgrep.yml  spellcheck.yml  test-release.yml
.husky/: pre-push
crates/advent-of-code-2022/: Cargo.toml
crates/advent-of-code-2022/src/: shared.rs
crates/advent-of-code-2022/src/shared/: day.rs  grids.rs  solution.rs  tree.rs
crates/advent-of-code-2022/src/shared/grids/: grid.rs  infinite_grid.rs
crates/advent-of-code-2022/src/template/: xx.rs
src/: lib.rs  main.rs
src/day_01/: mod.rs
src/day_02/: mod.rs
src/day_03/: mod.rs
src/day_04/: mod.rs
src/day_05/: mod.rs
src/day_06/: mod.rs
src/day_07/: mod.rs
src/day_08/: mod.rs
src/day_09/: mod.rs
src/day_1/: mod.rs  part_1.rs  part_2.rs
src/day_10/: mod.rs  part_2.rs
src/day_11/: mod.rs
src/day_12/: mod.rs
src/day_13/: mod.rs
src/day_14/: mod.rs
src/day_15/: mod.rs
src/day_16/: mod.rs
src/day_17/: mod.rs
src/day_18/: mod.rs
src/day_19/: mod.rs
src/day_2/: mod.rs  part_1.rs  part_2.rs
src/day_20/: mod.rs
src/day_21/: mod.rs
src/day_22/: mod.rs
src/day_24/: mod.rs
src/day_25/: mod.rs
src/day_3/: input.txt  mod.rs  part_1.rs  part_2.rs
src/day_4/: mod.rs  part_1.rs  part_2.rs
src/day_5/: mod.rs  part_1.rs  part_2.rs
src/day_6/: mod.rs  part_1.rs  part_2.rs
src/day_7/: mod.rs  part_1.rs  part_2.rs
src/day_8/: mod.rs  part_1.rs  part_2.rs
src/day_9/: part_1.rs  part_2.rs
src/error/: error.rs
src/errors/: mod.rs
src/shared/: day.rs  grids.rs  mod.rs  solution.rs  tree.rs
src/shared/grids/: grid.rs  infinite_grid.rs  mod.rs
src/template/: xx.rs
src/utils/: mod.rs
tests/: integration_tests.rs
