[package]
name = "advent-of-code-2022"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2021"
rust-version = "1.84.0"
authors = ["Kristof Mattei"]
description = "Advent of Code 2022"
license-file = "LICENSE"
categories = ["playground"]
keywords = ["playground"]
repository = "https://github.com/kristof-mattei/advent-of-code-2022"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
pedantic = "warn"
cargo = "warn"
# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[profile.release]
debug = true

[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
color-eyre = { git = "https://github.com/eyre-rs/eyre", rev = "2dc0688d33a487009e8bc3222cbab135261383b0", features = [
    "track-caller",
] }
enum-map = "2.7.3"
hashbrown = "0.15.2"
regex = { version = "1.11.1", default-features = false, features = [
    "perf",
    "unicode-perl", # for \d \s \w
    "std",
] }

# We compile the Docker container with musl to get a static library. Smaller, faster.
# BUT that means that we need to include openssl
# Documentation on the syntax:
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
[target.'cfg(all(target_arch = "x86_64", target_os="linux", target_env="musl"))'.dependencies]
# openssl = { version = "0.10.36", features = ["vendored"] }
