[package]
name = "advent-of-code-2022"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2024"
rust-version = "1.87.0"
authors = ["Kristof Mattei"]
description = "Advent of Code 2022"
license-file = "LICENSE"
categories = ["playground"]
keywords = ["playground"]
repository = "https://github.com/kristof-mattei/advent-of-code-2022"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
pedantic = "warn"
perf = "warn"
# restriction = "warn"
style = "warn"
suspicious = "warn"

# this one is debatable. continue is used in places to be explicit, and to guard against
# issues when refactoring
needless_continue = { level = "allow", priority = 127 }
# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[dependencies]
color-eyre = "0.6.4"
enum-map = "2.7.3"
hashbrown = "0.15.3"
regex = { version = "1.11.1", default-features = false, features = [
    "perf",
    "unicode-perl", # for \d \s \w
    "std",
] }

# OpenSSL for musl
# [target.'cfg(all(any(target_arch="x86_64", target_arch="aarch64"), target_os="linux", target_env="musl"))'.dependencies]
# openssl = { version = "0.10.36", features = ["vendored"] }
